--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,14 +17,45 @@
 
   {% seo title=false %}
 
-  <script src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js" defer></script>
   <script>
+    $.fn.attrs = function () {
+      const obj = {}
+      $.each(this[0].attributes, function () {
+        if(this.specified) obj[this.name] = this.value
+      })
+
+      return obj
+    }
+
     window.fbAsyncInit = function () {
       FB.init({
         appId: '568313693889375',
         autoLogAppEvents : true,
-        xfbml: true,
         version: 'v7.0'
+      })
+
+      FB.AppEvents.setAppVersion('1.1.3')
+
+      $('[data-fbml]').each(function () {
+        const element = $(this)
+        const parent = element.parent()[0]
+        const attributes = element.attrs()
+        const fbmls = []
+
+        $.each(attributes, function (attr, value) {
+          if (!attr.match(/^(data-fbml-)/)) return true
+
+          const fbml = attr.split('data-fbml-')[1]
+          fbmls.push(fbml)
+          element.attr(fbml, value)
+        })
+
+        FB.XFBML.parse(parent, function () {
+          $.each(element.attrs(), function (attr) {
+            if (attr.match(/^(fb-)/)) fbmls.push(attr)
+          })
+          $.each(fbmls, function (i, attr) { element.removeAttr(attr) })
+        })
       })
     }
   </script>
