--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,11 @@
         })
       })
     }
+
+    $(document).ready(function () {
+      $.ajaxSetup({ cache: true })
+      $.getScript('https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js')
+    })
   </script>
 
   <script src="https://www.googletagmanager.com/gtag/js?id=UA-161214318-6" async></script>
