--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -1,9 +1,8 @@
 ---
 ---
 
-@import "default";
 @import url("/assets/css/primer.css");
 
-.bg-color {
+.Header {
   background-color: {{ site.color }} !important;
 }
